docs: add authentication screenshots; align README and versioning to v2.1.0
- Add docs/Authentication/images (login/register for student, faculty, admin)
- Document full UI flow in README; link CHANGELOG
- Bump frontend to 2.1.0 and backend to 2.1.0-SNAPSHOT
- Centralize React Helmet for /login, /register, /forgot-password (correct tab title)

Made-with: Cursor