@@ -1,11 +1,13 @@
 package com.example.demo.security;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.util.StringUtils;
 
 
 public class CustomUserDetails implements UserDetails {
@@ -19,8 +21,11 @@ public class CustomUserDetails implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getRole());
-		return List.of(authority);
+		// SimpleGrantedAuthority rejects null/blank — a null DB role used to break every JWT-authenticated request after login.
+		if (!StringUtils.hasText(user.getRole())) {
+			return Collections.emptyList();
+		}
+		return List.of(new SimpleGrantedAuthority(user.getRole().trim()));
 	}
 
 	@Override
